Reorganized files for flask

--- a/templates/index.html
+++ b/templates/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>Naughty Or Nice</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
-    <link rel="stylesheet" href="instagrid.css">
+    <link rel="stylesheet" type="text/css" href="/static/instagrid.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="display.js"></script>
-    <script src="analyze.js"></script>
+    <script src="/static/display.js"></script>
+    <script src="/static/analyze.js"></script>
 </head>
 
 <body>
