--- a/ng5/src/app/home/home.component.scss
+++ b/ng5/src/app/home/home.component.scss
@@ -68,7 +68,7 @@ label{
   float: right;
   z-index: 10;
   height: 2rem;
-  background: linear-gradient(to left, #860000, #005200);
+  background: linear-gradient(to left, #861903, #006a00);
   vertical-align: center;
 }
 
